# rust_https_Server

./: .env  .gitignore  Cargo.toml  README.md  user.json
src/: args.rs  main.rs
src/Utilites/: authentication.rs
src/gui_files/: admin_gui.rs  mod.rs  user_gui.rs
src/server_side/: sever_side.rs
