[package]
name = "HTTPS_SERVER"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "suggestions", "color", "wrap_help"] }
csv = "1.3.1"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tui = "0.19"
crossterm = "0.25"